// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component List empty 1`] = `
<div
  className="component-list sc-bZQynM AMncx"
/>
`;

exports[`Storyshots Component List multiple items 1`] = `
<div
  className="component-list sc-bZQynM AMncx"
>
  <a
    className="sc-htoDjs jssEWI"
    href="/One"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw jWWqnZ"
      selected={false}
    >
      One
    </div>
  </a>
  <a
    className="sc-htoDjs jssEWI"
    href="/Two"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw jWWqnZ"
      selected={false}
    >
      Two
    </div>
  </a>
  <a
    className="sc-htoDjs jssEWI"
    href="/Three"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw jWWqnZ"
      selected={false}
    >
      Three
    </div>
  </a>
</div>
`;

exports[`Storyshots Component List multiple items with selection 1`] = `
<div
  className="component-list sc-bZQynM AMncx"
>
  <a
    className="sc-htoDjs jssEWI"
    href="/One"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw jWWqnZ"
      selected={false}
    >
      One
    </div>
  </a>
  <a
    className="sc-htoDjs jssEWI"
    href="/Two"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw bmyZst"
      selected={true}
    >
      Two
    </div>
  </a>
  <a
    className="sc-htoDjs jssEWI"
    href="/Three"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw jWWqnZ"
      selected={false}
    >
      Three
    </div>
  </a>
</div>
`;

exports[`Storyshots Component List single item 1`] = `
<div
  className="component-list sc-bZQynM AMncx"
>
  <a
    className="sc-htoDjs jssEWI"
    href="/One"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw jWWqnZ"
      selected={false}
    >
      One
    </div>
  </a>
</div>
`;

exports[`Storyshots Component List single item with selection 1`] = `
<div
  className="component-list sc-bZQynM AMncx"
>
  <a
    className="sc-htoDjs jssEWI"
    href="/One"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw jWWqnZ"
      selected={false}
    >
      One
    </div>
  </a>
</div>
`;

exports[`Storyshots Component default example 1`] = `
<div
  className="sc-ifAKCX keGVmf"
>
  <div
    className="sc-EHOje fwuUJE"
  >
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Default
      </div>
      <div
        className="sc-bwzfXH kWRhKE"
      >
        <div
          className="example-contents sc-htpNat krJdEa"
        >
          <div
            style={
              Object {
                "color": "red",
              }
            }
          >
            Hello 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component examples provided 1`] = `
<div
  className="sc-ifAKCX keGVmf"
>
  <div
    className="sc-EHOje fwuUJE"
  >
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Example 1
      </div>
      <div
        className="sc-bwzfXH kWRhKE"
      >
        <div
          className="example-contents sc-htpNat krJdEa"
        >
          <div
            style={
              Object {
                "color": "red",
              }
            }
          >
            Hello 
            Jake
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Example 2
      </div>
      <div
        className="sc-bwzfXH kWRhKE"
      >
        <div
          className="example-contents sc-htpNat krJdEa"
        >
          <div
            style={
              Object {
                "color": "red",
              }
            }
          >
            Hello 
            Andreja
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component with react state 1`] = `
<div
  className="sc-ifAKCX keGVmf"
>
  <div
    className="sc-EHOje fwuUJE"
  >
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Counter
      </div>
      <div
        className="sc-bwzfXH kWRhKE"
      >
        <div
          className="example-contents sc-htpNat krJdEa"
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "snow",
                "color": "violet",
                "padding": "2rem",
              }
            }
          >
            <h2>
              0
            </h2>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example Basic 1`] = `
<div
  className="sc-bdVaJa hLhmaC"
>
  <div
    className="example-title sc-bxivhb gblRRH"
  >
    Title
  </div>
  <div
    className="sc-bwzfXH kWRhKE"
  >
    <div
      className="example-contents sc-htpNat krJdEa"
    >
      <div>
        Hello World
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example Example 1 1`] = `
<div
  className="sc-bdVaJa hLhmaC"
>
  <div
    className="example-title sc-bxivhb gblRRH"
  >
    Example 1
  </div>
  <div
    className="sc-bwzfXH kWRhKE"
  >
    <div
      className="example-contents sc-htpNat krJdEa"
    >
      <div
        style={
          Object {
            "backgroundColor": "peachpuff",
            "color": "magneta",
            "padding": "1rem",
          }
        }
      >
        <h1>
          This is an example
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar closed 1`] = `
<div
  className="sidebar sc-iwsKbI jTZNmv"
>
  <div
    className="sc-fjdhpX gddroE"
  >
    <span
      className="sidebar-toggle sc-jzJRlG dCmEID"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-list fa-w-16 fa-lg "
        data-icon="list"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128 116V76c0-8.837 7.163-16 16-16h352c8.837 0 16 7.163 16 16v40c0 8.837-7.163 16-16 16H144c-8.837 0-16-7.163-16-16zm16 176h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zM16 144h64c8.837 0 16-7.163 16-16V64c0-8.837-7.163-16-16-16H16C7.163 48 0 55.163 0 64v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Sidebar open and empty 1`] = `
<div
  className="sidebar sc-iwsKbI eLGZGE"
>
  <div
    className="sc-fjdhpX gddroE"
  >
    <a
      className="sc-gqjmRU eYqZJu"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-VigVT jFCsNF"
      >
        <img
          alt=""
          className="logo sc-dnqmqq cnjRDI"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-jTzLTM jEoeNn"
  />
  <div
    className="component-list sc-bZQynM AMncx"
  />
</div>
`;

exports[`Storyshots Sidebar open with components 1`] = `
<div
  className="sidebar sc-iwsKbI eLGZGE"
>
  <div
    className="sc-fjdhpX gddroE"
  >
    <a
      className="sc-gqjmRU eYqZJu"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-VigVT jFCsNF"
      >
        <img
          alt=""
          className="logo sc-dnqmqq cnjRDI"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-jTzLTM jEoeNn"
  />
  <div
    className="component-list sc-bZQynM AMncx"
  >
    <a
      className="sc-htoDjs jssEWI"
      href="/App"
      onClick={[Function]}
    >
      <div
        className="sc-gzVnrw jWWqnZ"
        selected={false}
      >
        App
      </div>
    </a>
    <a
      className="sc-htoDjs jssEWI"
      href="/ComponentA"
      onClick={[Function]}
    >
      <div
        className="sc-gzVnrw jWWqnZ"
        selected={false}
      >
        ComponentA
      </div>
    </a>
    <a
      className="sc-htoDjs jssEWI"
      href="/ComponentB"
      onClick={[Function]}
    >
      <div
        className="sc-gzVnrw jWWqnZ"
        selected={false}
      >
        ComponentB
      </div>
    </a>
  </div>
</div>
`;
